mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_self_outside.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux_compiler run /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_self_outside.mux`

In /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_self_outside.mux, line 2:
    auto s = self
             ^
Cannot use 'self' outside of a method
