mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_sync_sleep_wrong_type.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
error: Type mismatch: expected int, got string
--> test_scripts/error_cases/semantic_sync_sleep_wrong_type.mux:3:1
   |
 3 | sync.sleep("100")
   | ^^^^^^^^^^
