mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_sync_spawn_wrong_lambda_signature.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
error: Type mismatch: expected fn() -> void, got fn(int) -> void
--> test_scripts/error_cases/semantic_sync_spawn_wrong_lambda_signature.mux:3:28
   |
 3 | result<Thread, string> t = sync.spawn(func(int x) returns void {
   |                            ^^^^^^^^^^
